bpo-30936: Fix a reference leak in json when fail to sort keys. (#2712)